# OpenOats

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  appcast.xml  package-lock.json
.github/: repo-policy.md  repo-policy.yml
.github/workflows/: gate-runner.yml  implement-agent.yml  mac-release.yml  release-dmg.yml  release-runner.yml  release.yml  triage-agent.yml  ubuntu-release.yml  ui-smoke.yml  windows-release.yml
Casks/: openoats.rb
OpenGranola/: Package.swift
OpenGranola/Sources/OpenGranola/: Info.plist
OpenOats/: Cargo.toml  Package.resolved  Package.swift
OpenOats/OpenOatsTauri/: package.json  tsconfig.node.json
OpenOats/OpenOatsTauri/src/: App.tsx  (+2 more)
UITests/OpenOatsUITests/: SmokeTests.swift
crates/opencassava-core/: Cargo.toml
crates/opencassava-core/src/: download.rs  keychain.rs  lib.rs  models.rs  settings.rs
crates/opencassava-core/src/audio/: cpal_mic.rs  echo_cancel.rs  mod.rs
crates/opencassava-core/src/intelligence/: embedding_client.rs  knowledge_base.rs  llm_client.rs  mod.rs  notes_engine.rs  suggestion_engine.rs
crates/opencassava-core/src/storage/: mod.rs  session_store.rs  template_store.rs  transcript_logger.rs
crates/opencassava-core/src/transcription/: engine.rs  faster_whisper.rs  faster_whisper_requirements.txt  mod.rs  omni_asr.rs  omni_asr_requirements.txt  omni_asr_worker.py  parakeet.rs  parakeet_requirements.txt  parakeet_worker.py  streaming_transcriber.rs  vad.rs  whisper.rs
demo-kb/: DEMO_SCENARIOS.md
demo-kb-investor/deal-flow/: recent-pitches.md
demo-kb-investor/due-diligence/: red-flags.md
demo-kb-investor/market-theses/: 2026-themes.md  prior-auth-landscape.md
demo-kb-investor/portfolio/: active-companies.md
demo-kb/competitive/: landscape.md
demo-kb/metrics/: dashboard.md
demo-kb/product/: roadmap.md  user-research.md
demo-kb/sales/: case-studies.md  pricing.md
docs/: lm-studio-setup.md  meeting-format-spec.md
opencassava/: index.html  package-lock.json  package.json
opencassava/scripts/: cleanup-whisper.ps1  prepare-whisper.ps1  run-tauri.mjs  sync-version.mjs  vite-build.mjs  vite-dev.mjs
opencassava/src/: App.css  App.tsx  OverlayApp.tsx  index.css  main.tsx  theme.ts  types.ts
opencassava/src-tauri/: Cargo.toml  Info.plist  OpenCassava.entitlements  tauri.conf.json
opencassava/src-tauri/capabilities/: default.json
opencassava/src-tauri/src/: audio_macos.rs  audio_windows.rs  engine.rs  lib.rs
scripts/: build_swift_app.sh  make_dmg.sh  package_smoke_check.sh
tests/: test_minimax_integration.py
tools/sidecast-debug/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+243 files in other folders)
