[package]
name = "opencassava-core"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
keyring = "3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
whisper-rs = "0.14"
cpal = "0.15"
rubato = "0.15"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tokio-stream = "0.1"
realfft = "3"
num-complex = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
