[package]
name = "app"
version = "0.1.0"
description = "OpenCassava"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
opencassava-core = { path = "../../crates/opencassava-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3"
coreaudio-sys = { version = "0.2", features = ["audio_unit"] }
objc2 = "0.5"
objc2-foundation = "0.2"
dispatch = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_KernelStreaming",
    "Win32_System_Variant",
    "Win32_Devices_Properties",
] }
